--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
   "botName": "ShanBot",
   "linkGroup": "https://chat.whatsapp.com/IpWP0AiNMLTAFKoVGaiMKg",
   "logonya": {
-    "url": "https://raw.githubusercontent.com/Aztecs444/media/Zeck/image/gura.jpg",
+    "url": "https://telegra.ph/file/b135ec44806ba29954764.jpg",
     "isLogo": true
   },
   "thumbnailDok": {
